[package]
name = "jikji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.13.3", features = ["process"] }
hocon = "0.9.0"
postgres = "0.19.5"
lazy_static = "1.4.0"
getopts = "^0.2"
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }