[package]
name = "jikji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "^0.2"
toml = "0.7.3"
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
lazy_static = "1.4.0"
postgres = "0.19.5"
prometheus = { version = "0.13.3", features = ["process"] }
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }